--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "tsc": "tsc",
     "build": "webpack"
   },
   "author": "",
@@ -14,6 +13,11 @@
     "source-map-loader": "^0.2.1",
     "ts-loader": "^2.0.3",
     "typescript": "^2.3.2",
+    "vue-typescript-import-dts": "^3.1.0",
     "webpack": "^2.5.1"
+  },
+  "dependencies": {
+    "vue": "^2.3.3",
+    "vue-class-component": "^5.0.1"
   }
 }
